--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<h2>La révolution numérique...</h2>
 						<ul>
 							<li>Nouvelles formes de communication</li>
-							<li>Nouvelles formes de production</li>
+							<li>Nouveaux modes de production</li>
 							<li>Mise en réseau planétaire</li>
 							<li>Décentralisation</li>
 						</ul>
@@ -91,8 +91,7 @@
 						<ul>
 							<li>Un public vieillissant</li>
 							<li>Difficulté d'atteindre des nouveaux publics</li>
-							<li>Des institutions <i>à 2 vitesses</i></li>
-							<li>Des problèmes structurels</li>
+							<li>Numérique = Site web + Numérisation + Facebook</li>
 						</ul>
 						<p><i class="fa fa-arrow-right"></i> Une crise d'identité</p>
 					</section>
@@ -103,8 +102,7 @@
 							<li>Mouvement <i>Maker</i></li>
 							<li>Économie collaborative</li>
 							<li>Méthodes agiles et hackathons</li>
-							<li>Open Source</li>
-							<li>Auto-organisation</li>
+							<li>Open Source et auto-organisation</li>
 						</ul>
 					</section>
 				</section>
@@ -128,7 +126,7 @@
 						<h2>Notre vision</h2>
 						<p>Une institution :</p>
 						<ul>
-							<i class="fa fa-child fa-fw"></i> Réseau (social / local)</br>
+							<i class="fa fa-child fa-fw"></i> Hub (social / local / savoir)</br>
 							<i class="fa fa-wrench fa-fw"></i> Bac à sable (playful / test)</br>
 							<i class="fa fa-mobile fa-fw"></i> Techno-curious</br>
 							<i class="fa fa-unlock fa-fw"></i> En mode Ouvert</br>
@@ -144,6 +142,7 @@
 
 					<section>
 						<h2>Activités</h2>
+						<p>Engagement et Appropriation</p>
 						<ul>
 							<li>Événements créatifs</li>
 							<li>Projets expérimentaux</li>
@@ -157,12 +156,10 @@
 					<section>
 						<h1>Museomix</h1>
 						<h1><i class="fa fa-bank"></i></h1>
-					</section>
-
-					<section>
 						<blockquote>
 							3 jours de créativité technologique au coeur d'un musée
 						</blockquote>
+						<p><small>6, 7, 8 novembre</small></p>
 					</section>
 
 					<section>
@@ -198,9 +195,6 @@
 					<section>
 						<h1>ABC3D</h1>
 						<h1><i class="fa fa-book"></i></h1>
-					</section>
-
-					<section>
 						<blockquote>
 							Une série d'ateliers d'impression 3D à réaliser en bibliothèque, diffusée en Open Source
 						</blockquote>
