--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 						<small>vendredi 2 octobre 2015</small>
 					</p>
 					<p>
-						<small>justine@technoculture.club</br> <a href="http://technoculture.club" target="_blank">http://technoculture.club</a></small>
+						<small>
+							<a href="">Justine G. Chapleau - justine@technoculture.club</a></br> 
+							<a href="http://technoculture.club" target="_blank">http://technoculture.club</a>
+						</small>
 					</p>
 				</section>
 
@@ -141,7 +144,7 @@
 					</section>
 
 					<section>
-						<h2>Activités</h2>
+						<h2>Comment ?</h2>
 						<p>Engagement et Appropriation</p>
 						<ul>
 							<li>Événements créatifs</li>
@@ -156,10 +159,10 @@
 					<section>
 						<h1>Museomix</h1>
 						<h1><i class="fa fa-bank"></i></h1>
-						<blockquote>
-							3 jours de créativité technologique au coeur d'un musée
-						</blockquote>
-						<p><small>6, 7, 8 novembre</small></p>
+						<strong>
+							3 jours de créativité technologique</br> au coeur d'un musée
+						</strong>
+						<p>6, 7, 8 novembre au MACM</p>
 					</section>
 
 					<section>
@@ -195,9 +198,9 @@
 					<section>
 						<h1>ABC3D</h1>
 						<h1><i class="fa fa-book"></i></h1>
-						<blockquote>
+						<srtong>
 							Une série d'ateliers d'impression 3D à réaliser en bibliothèque, diffusée en Open Source
-						</blockquote>
+						</strong>
 					</section>
 
 					<section>
@@ -211,7 +214,8 @@
 				</section>
 
 				<section>
-					<h2>Prêt à jouer ?</h2>
+					<img src="lib/images/logo_TCC_M.png" class="clean">
+					<h2>Get in touch!</h2>
 					<p><a href="mailto:justine@technoculture.club">justine@technoculture.club</a></p>
 					<p><a href="http://technoculture.club">http://technoculture.club</a></p>
 				</section>
