--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 				<!-- intro -->
 				<section>
 					<img src="lib/images/logo_TCC_M.png" class="clean">
-					<h3>MUTEK_IMG</h3>
+					<h3>Centre Phi</h3>
 					<p>
-						<small>vendredi 2 octobre 2015</small>
+						<small>vendredi 18 novembre 2016</small>
 					</p>
 					<p>
 						<small>
-							<a href="">Justine G. Chapleau - justine@technoculture.club</a></br> 
+							<a href="">Arthur Schmitt - arthur@technoculture.club</a></br> 
 							<a href="http://technoculture.club" target="_blank">http://technoculture.club</a>
 						</small>
 					</p>
@@ -105,7 +105,8 @@
 							<li>Mouvement <i>Maker</i></li>
 							<li>Économie collaborative</li>
 							<li>Méthodes agiles et hackathons</li>
-							<li>Open Source et auto-organisation</li>
+							<li>Open Source</li> 
+							<li>Auto-organisation</li>
 						</ul>
 					</section>
 				</section>
@@ -138,12 +139,6 @@
 					</section>	
 
 					<section>
-						<p><i class="fa fa-bank"></i></p>
-						<p><i class="fa fa-child"></i><i class="fa fa-child"></i><i class="fa fa-child"></i><i class="fa fa-child"></i> + <i class="fa fa-wrench"></i> + <i class="fa fa-mobile"></i> +  <i class="fa fa-unlock"></i> + <i class="fa fa-magic"></i></p>
-						<p><i class="fa fa-heart"></i></p>
-					</section>
-
-					<section>
 						<h2>Comment ?</h2>
 						<p>Engagement et Appropriation</p>
 						<ul>
@@ -162,7 +157,7 @@
 						<strong>
 							3 jours de créativité technologique</br> au coeur d'un musée
 						</strong>
-						<p>6, 7, 8 novembre au MACM</p>
+						<p>dernière édition : 6, 7, 8 novembre 2015 au MACM</p>
 					</section>
 
 					<section>
@@ -179,8 +174,9 @@
 					<section>
 						<h2>Un projet international</h2>
 						<ul>
-							<li>11 musées, 5 pays</li>
+							<li>30+ musées, 10+ pays</li>
 							<li>Auto-organisé</li>
+							<li>Mentorat inter-communautés</li>
 							<li>En évolution constante</li>
 							<li>Des 'remixs'</li>
 						</ul>
@@ -188,9 +184,22 @@
 					</section>
 
 					<section>
-						<h2>Rendez-vous</h2>
-						<p>6, 7, 8 novembre au MAC</p>
-						<p>Ouverture au public dimanche 14h</p>
+						<h2>Au Québec</h2>
+						<ul>
+							<li>2013 - Musée de la Civilisation</li>
+							<li>2014 - Musée des Beaux Arts de Montréal</li>
+							<li>2015 - Musée d'Art contemporain de Montréal</li>
+							<li>2015 - Musée des Beaux Arts de Québec</li>
+							<li>2016 - Monastère des Augustines</li>
+							<li>2016 - Musée du Bas Saint Laurent</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Mais aussi...</h2>
+						<p>Museomix Mexico 2015</p>
+						<p>Jetlag Diaries</p>
+						<p>Accord Canada France</p>
 					</section>
 				</section>
 
@@ -211,12 +220,31 @@
 							<li>Inventer les usages de demain</li>
 						</ul>
 					</section>
+
+					<section>
+						<h2>À venir</h2>
+						<ul>
+							<li>Ateliers hors bibliothèques</li>
+							<li>Ateliers sur d'autres thématiques</li>
+							<li>Formation professionnelle sur les makerspaces</li>
+							<li>Diffusion internationale ?</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<h2>quelques pistes...</h2>
+					<ul>
+						<li>Encourager le déploiement d'organismes québecois</li>
+						<li>Encourager les rencontres internationales au Québec</li>
+						<li>faciliter le déploiement au Québec de projets internationaux</li>
+					</ul>
 				</section>
 
 				<section>
 					<img src="lib/images/logo_TCC_M.png" class="clean">
 					<h2>Get in touch!</h2>
-					<p><a href="mailto:justine@technoculture.club">justine@technoculture.club</a></p>
+					<p><a href="mailto:arthur@technoculture.club">arthur@technoculture.club</a></p>
 					<p><a href="http://technoculture.club">http://technoculture.club</a></p>
 				</section>
 
